--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,7 @@
 @article{WOS:000209370100006,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {We introduce a molecular toolbox for manipulation of neuronal gene
 expression in vivo. The toolbox includes promoters, ion channels,
 optogenetic tools, fluorescent proteins, and intronic artificial
@@ -69,7 +71,9 @@ down-regulate neuronal gene expression <i>in vivo</i>},
 }
 
 @article{WOS:000250952700003,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Whereas recent studies have elucidated principles for representation of
 information within the entorhinal cortex, less is known about the
 molecular basis for information processing by entorhinal neurons. The
@@ -146,7 +150,9 @@ stellate cells from layer II of the entorhinal cortex},
 }
 
 @article{WOS:000261746700017,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neurons important for cognitive function are often classified by their
 morphology and integrative properties. However, it is unclear if within
 a single class of neuron these properties tune synaptic responses to the
@@ -224,7 +230,9 @@ Organization of Grid Cell Firing Fields},
 }
 
 @article{WOS:000263924500013,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The transformation of synaptic input into patterns of spike output is a
 fundamental operation that is determined by the particular complement of
 ion channels that a neuron expresses. Although it is well established
@@ -307,7 +315,9 @@ Activity-Dependent Modulation of Spike Probability},
 }
 
 @article{WOS:000281389500018,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neuronal activity is mediated through changes in the probability of
 stochastic transitions between open and closed states of ion channels.
 While differences in morphology define neuronal cell types and may
@@ -391,7 +401,9 @@ Dependence and Probabilistic Synaptic Activation of Dendritic Spikes},
 }
 
 @article{WOS:000287833900001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neuron types are classically defined by anatomical and physiological
 properties that determine how synaptic inputs are integrated. Here, we
 provide an overview of the evidence that, among neurons of a single
@@ -459,7 +471,9 @@ of neural circuits},
 }
 
 @article{WOS:000288736500012,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The axon initial segment (AIS) is critical for the initiation and
 propagation of action potentials. Assembly of the AIS requires
 interactions between scaffolding molecules and voltage-gated sodium
@@ -536,7 +550,9 @@ Initiation through Maintenance of the Axon Initial Segment},
 }
 
 @article{WOS:000292205900012,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The membrane potential dynamics of stellate neurons in layer II of the
 medial entorhinal cortex are important for neural encoding of location.
 Previous studies suggest that these neurons generate intrinsic
@@ -611,7 +627,9 @@ current fluctuations},
 }
 
 @article{WOS:000296799700014,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Long-term synaptic plasticity requires postsynaptic influx of Ca(2+) and
 is accompanied by changes in dendritic spine size. Unless Ca(2+) influx
 mechanisms and spine volume scale proportionally, changes in spine size
@@ -688,7 +706,9 @@ Plasticity},
 }
 
 @article{WOS:000303126700001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The medial entorhinal contex (MEC) is an increasingly important focus
 for investigation of mechanisms for spatial representation. Grid cells
 found in layer II of the MEC are likely to be stellate cells, which form
@@ -764,7 +784,9 @@ cells and their contribution to grid cell firing fields},
 }
 
 @article{WOS:000313404600014,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Cortical circuits are thought to multiplex firing rate codes with
 temporal codes that rely on oscillatory network activity, but the
 circuit mechanisms that combine these coding schemes are unclear. We
@@ -843,7 +865,9 @@ Firing Fields},
 }
 
 @article{WOS:000323427000002,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {In many cortical neurons, HCN1 channels are the major contributors to
 I-h, the hyperpolarization-activated current, which regulates the
 intrinsic properties of neurons and shapes their integration of synaptic
@@ -935,7 +959,9 @@ Firing and Executive Memory Function},
 }
 
 @article{WOS:000326899800023,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neural computations rely on ion channels that modify neuronal responses
 to synaptic inputs. While single cell recordings suggest diverse and
 neurone type-specific computational functions for HCN1 channels, their
@@ -1007,7 +1033,9 @@ learning and constrain synaptic inhibition},
 }
 
 @article{WOS:000346023000009,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Hypertension is associated with pathologically increased sympathetic
 drive to the vasculature. This has been attributed to increased
 excitatory drive to sympathetic preganglionic neurons (SPN) from
@@ -1098,7 +1126,9 @@ hypertensive rats},
 }
 
 @article{WOS:000346191500020,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The medial septum (MS) is required for theta rhythmic oscillations and
 grid cell firing in the medial entorhinal cortex (MEC). While GABAergic,
 glutamatergic, and cholinergic neurons project from the MS to the MEC,
@@ -1181,7 +1211,9 @@ Interneurons in the Medial Entorhinal Cortex},
 }
 
 @article{WOS:000348683800002,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Hippocampal place cells encode an animal's past, current and future
 location through sequences of action potentials generated within each
 cycle of the network theta rhythm. These sequential representations have
@@ -1245,7 +1277,9 @@ Enables Flexible Remapping},
 }
 
 @article{WOS:000349309400021,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neural circuits in the medial entorhinal cortex (MEC) encode an animal's
 position and orientation in space. Within the MEC spatial
 representations, including grid and directional firing fields, have a
@@ -1336,7 +1370,9 @@ Cortex Revealed by Large-scale Anatomical Analysis of Gene Expression},
 }
 
 @article{WOS:000358250400001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neural computations underlying cognitive functions require calibration
 of the strength of excitatory and inhibitory synaptic connections and
 are associated with modulation of gamma frequency oscillations in
@@ -1405,7 +1441,11 @@ within recurrent attractor networks},
 }
 
 @article{WOS:000365766500020,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN x SÜRMELI
+x 
+NOLAN
+ x 
+SÜRMELI},
  abstract = {Deep layers of the medial entorhinal cortex are considered to relay
 signals from the hippocampus to other brain structures, but pathways for
 routing of signals to and from the deep layers are not well established.
@@ -1483,7 +1523,9 @@ Layers of the Medial Entorhinal Cortex},
 }
 
 @article{WOS:000379804700002,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  address = {111 RIVER ST, HOBOKEN 07030-5774, NJ USA},
  affiliation = {Nolan, MF (Corresponding Author), Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.
 Nolan, Matthew F., Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.},
@@ -1524,7 +1566,11 @@ researchfish},
 }
 
 @article{WOS:000388572700024,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN x SÜRMELI
+x 
+NOLAN
+ x 
+SÜRMELI},
  address = {600 TECHNOLOGY SQUARE, 5TH FLOOR, CAMBRIDGE, MA 02139 USA},
  author = {Surmeli, Gulsen and Marcu, Daniel Cosmin and McClure, Christina and
 Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
@@ -1565,7 +1611,9 @@ Layers of the Medial Entorhinal Cortex (vol 88, pg 1040, 2015)},
 }
 
 @article{WOS:000389029900005,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  address = {111 RIVER ST, HOBOKEN 07030-5774, NJ USA},
  affiliation = {Nolan, MF (Corresponding Author), Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.
 Nolan, Matthew F., Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.},
@@ -1606,7 +1654,9 @@ Medline; BBSRC {[}BB/L010496/1] Funding Source: UKRI},
 }
 
 @article{WOS:000389029900011,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neurons in the medial entorhinal cortex encode location through spatial
 firing fields that have a grid-like organisation. The challenge of
 identifying mechanisms for grid firing has been addressed through
@@ -1675,7 +1725,9 @@ excitatory-inhibitory interactions},
 }
 
 @article{WOS:000391085500001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Grid-firing fields of neurons in the entorhinal cortex are thought to
 require inputs encoding running speed. Glutamatergic projections from
 the medial septum may be one of the inputs that provide these speed
@@ -1718,7 +1770,9 @@ Gonzalez-Sulser, Alfredo/0000-0003-3494-4029},
 }
 
 @article{WOS:000393396400001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Encoding of behavioral episodes as spike sequences during hippocampal
 theta oscillations provides a neural substrate for computations on
 events extended across time and space. However, the mechanisms
@@ -1789,7 +1843,9 @@ interneurons},
 }
 
 @article{WOS:000394581400027,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {The inferior olive plays a critical role in motor coordination and
 learning by integrating diverse afferent signals to generate climbing
 fibre inputs to the cerebellar cortex. While it is well established that
@@ -1871,7 +1927,9 @@ generates bidirectional postsynaptic potentials},
 }
 
 @article{WOS:000413916800007,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Synaptic integrative mechanisms have profound effects on electrical
 signaling in the brain that, although largely hidden from recording
 methods that observe the spiking activity of neurons, may be critical
@@ -1940,7 +1998,9 @@ Schmidt-Hieber, Christoph/0000-0002-5328-9704},
 }
 
 @article{WOS:000423898500019,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Spatial learning requires estimates of location that may be obtained by
 path integration or from positional cues. Grid and other spatial firing
 patterns of neurons in the superficial medial entorhinal cortex (MEC)
@@ -2015,7 +2075,9 @@ Learning},
 }
 
 @article{WOS:000424981600009,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Cerebellar climbing-fiber-mediated complex spikes originate from neurons
 in the inferior olive (IO), are critical for motor coordination, and are
 central to theories of cerebellar learning. Hyperpolarization-activated
@@ -2094,7 +2156,9 @@ Spike Timing},
 }
 
 @article{WOS:000505692200033,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Episodic memory requires different types of information to be bound
 together to generate representations of experiences. The lateral
 entorhinal cortex (LEC) and hippocampus are required for episodic like
@@ -2173,7 +2237,9 @@ Episodic-like Memory},
 }
 
 @article{WOS:000519942200001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Distinctions between cell types underpin organizational principles for
 nervous system function. Functional variation also exists between
 neurons of the same type. This is exemplified by correspondence between
@@ -2244,7 +2310,9 @@ stellate cells in the medial entorhinal cortex},
 }
 
 @article{WOS:000568891400011,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Grid and head direction codes represent cognitive spaces for navigation
 and memory. Pure grid cells generate grid codes that have been assumed
 to be independent of head direction, whereas conjunctive cells generate
@@ -2330,7 +2398,9 @@ Passlack, Jessica/0000-0002-1043-3980},
 }
 
 @article{WOS:000710927500041,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Seizures can emerge from multiple or large foci in temporal lobe
 epilepsy, complicating focally targeted strategies such as surgical
 resection or the modulation of the activity of specific hippocampal
@@ -2415,7 +2485,11 @@ closed-loop stimulation},
 }
 
 @article{WOS:000711952200005,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN x SÜRMELI
+x 
+NOLAN
+ x 
+SÜRMELI},
  abstract = {The deep layers of the entorhinal cortex are important for spatial
 cognition, as well as memory storage, consolidation and retrieval. A
 long-standing hypothesis is that deep-layer neurons relay spatial and
@@ -2482,7 +2556,9 @@ and memory},
 }
 
 @article{WOS:000733722200008,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  address = {GREAT CLARENDON ST, OXFORD OX2 6DP, ENGLAND},
  article-number = {e79},
  author = {Hristova, Katerina and Martinez-Gonzalez, Cristina and Watson, Thomas C.
@@ -2519,7 +2595,9 @@ closed-loop stimulation (vol 144, pg 1576, 2021)},
 }
 
 @article{WOS:000850307700001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Establishing the biological basis of cognition and its disorders will
 require high precision spatiotemporal measurements of neural activity.
 Recently developed genetically encoded voltage indicators (GEVIs) report
@@ -2596,7 +2674,9 @@ Science, Multidisciplinary},
 }
 
 @article{WOS:000878031400006,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Neurons in the retrohippocampal cortices play crucial roles in spatial
 memory. Many retrohippocampal neu-rons have firing fields that are
 selectively active at specific locations, with memory for rewarded
@@ -2691,7 +2771,9 @@ retrohippocampal cortex},
 }
 
 @article{WOS:000934319900001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Standard models for spatial and episodic memory suggest that the lateral
 entorhinal cortex (LEC) and medial entorhinal cortex (MEC) send parallel
 independent inputs to the hippocampus, each carrying different types of
@@ -2770,7 +2852,9 @@ entorhinal cortex through synaptic connections in layer 1},
 }
 
 @article{WOS:000942420800001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {In fragile X syndrome (FX), the leading monogenic cause of autism,
 excessive neuronal protein synthesis is a core pathophysiology; however,
 an overall increase in protein expression is not observed. Here, we
@@ -2851,7 +2935,9 @@ li, ka wan/0000-0001-6983-5055},
 }
 
 @inproceedings{WOS:000946638602032,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Accurate decoding of neural signals often requires assigning
 extracellular waveforms acquired on the same electrode to their
 originating neurons, a process known as spike sorting. While many
@@ -2914,7 +3000,9 @@ Qualcomm; IEEE Circuits \& Syst Soc},
 }
 
 @article{WOS:001110181200001,
- abbr = {NOLAN},
+ abbr = {NOLAN
+x 
+NOLAN},
  abstract = {Memory consolidation involves interactions between the hippocampus and
 other cortical areas. A new study identifies neurons in the medial
 entorhinal cortex that over learning increase their coordination with
