another attempt at blocks in bib categories

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1405,7 +1405,7 @@ within recurrent attractor networks},
 }
 
 @article{WOS:000365766500020,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN<br>x<br>SÜRMELI},
  abstract = {Deep layers of the medial entorhinal cortex are considered to relay
 signals from the hippocampus to other brain structures, but pathways for
 routing of signals to and from the deep layers are not well established.
@@ -1524,7 +1524,7 @@ researchfish},
 }
 
 @article{WOS:000388572700024,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN<br>x<br>SÜRMELI},
  address = {600 TECHNOLOGY SQUARE, 5TH FLOOR, CAMBRIDGE, MA 02139 USA},
  author = {Surmeli, Gulsen and Marcu, Daniel Cosmin and McClure, Christina and
 Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
@@ -2415,7 +2415,7 @@ closed-loop stimulation},
 }
 
 @article{WOS:000711952200005,
- abbr = {NOLAN x SÜRMELI},
+ abbr = {NOLAN<br>x<br>SÜRMELI},
  abstract = {The deep layers of the entorhinal cortex are important for spatial
 cognition, as well as memory storage, consolidation and retrieval. A
 long-standing hypothesis is that deep-layer neurons relay spatial and
