update after structure discussion

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -687,7 +687,7 @@ Plasticity},
  year = {2011}
 }
 
-@article{WOS:000303126700001,
+@article{000303126700001,
  abbr = {NOLAN},
  abstract = {The medial entorhinal contex (MEC) is an increasingly important focus
 for investigation of mechanisms for spatial representation. Grid cells
@@ -2769,7 +2769,7 @@ entorhinal cortex through synaptic connections in layer 1},
  year = {2022}
 }
 
-@article{WOS:000942420800001,
+@article{000942420800001,
  abbr = {NOLAN},
  abstract = {In fragile X syndrome (FX), the leading monogenic cause of autism,
 excessive neuronal protein synthesis is a core pathophysiology; however,
