correct names in .bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -274,8 +274,8 @@ Research Council Precision Medicine PhD programme; Wellcome Trust
 {[}200855/Z/16/Z] Funding Source: Wellcome Trust},
  funding-text = {We thank Richard Morris for feedback on an earlier version of the
 manuscript, Robert Wallace for assistance with micro-CT imaging, Holly
-Stevens for technical assistance, and Gulsxen Surmeli, Ian Duguid, and
-members of the Surmeli, Duguid, and Nolan labs for helpful discussions.
+Stevens for technical assistance, and Gulsxen Sürmeli, Ian Duguid, and
+members of the Sürmeli, Duguid, and Nolan labs for helpful discussions.
 This work was supported by grants to M.F.N. from the Wellcome Trust
 (200855/Z/16/Z), the BBSRC (BB/L010496/1), and the Simons Initiative for
 the Developing Brain; by a College of Medicine and Veterinary Medicine
@@ -492,10 +492,10 @@ memory.},
  address = {50 HAMPSHIRE ST, FLOOR 5, CAMBRIDGE, MA 02139 USA},
  affiliation = {Nolan, MF (Corresponding Author), Univ Edinburgh, Ctr Discovery Brain Sci, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.
 Nolan, MF (Corresponding Author), Univ Edinburgh, Simons Initiat Developing Brain, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.
-Gerlei, Klara Z.; Brown, Christina M.; Surmeli, Gulsen; Nolan, Matthew F., Univ Edinburgh, Ctr Discovery Brain Sci, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.
-Surmeli, Gulsen; Nolan, Matthew F., Univ Edinburgh, Simons Initiat Developing Brain, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.},
+Gerlei, Klara Z.; Brown, Christina M.; Sürmeli, Gülşen; Nolan, Matthew F., Univ Edinburgh, Ctr Discovery Brain Sci, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.
+Sürmeli, Gülşen; Nolan, Matthew F., Univ Edinburgh, Simons Initiat Developing Brain, Hugh Robson Bldg,George Sq, Edinburgh EH8 9XD, Midlothian, Scotland.},
  affiliations = {University of Edinburgh; University of Edinburgh},
- author = {Gerlei, Klara Z. and Brown, Christina M. and Surmeli, Gulsen and Nolan,
+ author = {Gerlei, Klara Z. and Brown, Christina M. and Sürmeli, Gülşen and Nolan,
 Matthew F.},
  author-email = {mattnolan@ed.ac.uk},
  da = {2024-03-29},
@@ -521,7 +521,7 @@ RIPPLE OSCILLATIONS; CORTICAL-NEURONS; RAT; PROJECTIONS},
  month = {11},
  number = {11},
  number-of-cited-references = {92},
- orcid-numbers = {SURMELI, GULSEN/0000-0002-3227-0641},
+ orcid-numbers = {Sürmeli, Gülşen/0000-0002-3227-0641},
  pages = {876-887},
  publisher = {CELL PRESS},
  research-areas = {Neurosciences \& Neurology},
@@ -665,7 +665,7 @@ Veterinary Medicine PhD Studentship - Thomas Work Fellowship; Wellcome
 Trust Translational Neuroscience PhD programme {[}108890/Z/15/Z];
 Wellcome Trust {[}200855/Z/16/Z] Funding Source: Wellcome Trust; BBSRC
 {[}BB/L010496/1] Funding Source: UKRI},
- funding-text = {We thank Gulen Surmeli and Derek Garden for comments on the manuscript;
+ funding-text = {We thank Gulen Sürmeli and Derek Garden for comments on the manuscript;
 Emma Wood, Michael Allerhand and members of the Nolan laboratory for
 helpful discussions and Elizabeth Allison for assistance with set up of
 open field recordings and initial analysis. We thank scidraw.io for the
@@ -724,7 +724,7 @@ properties are tuned to circuit-level set points that vary within and
 between animals.},
  address = {SHERATON HOUSE, CASTLE PARK, CAMBRIDGE, CB3 0AX, ENGLAND},
  affiliation = {Nolan, MF (Corresponding Author), Univ Edinburgh, Ctr Discovery Brain Sci, Edinburgh, Midlothian, Scotland.
-Pastoll, Hugh; Garden, Derek L.; Surmeli, Gulden; Nolan, Matthew F., Univ Edinburgh, Ctr Discovery Brain Sci, Edinburgh, Midlothian, Scotland.
+Pastoll, Hugh; Garden, Derek L.; Sürmeli, Gulden; Nolan, Matthew F., Univ Edinburgh, Ctr Discovery Brain Sci, Edinburgh, Midlothian, Scotland.
 Papastathopoulos, Ioannis, Alan Turing Inst, London, England.
 Papastathopoulos, Ioannis, Univ Edinburgh, Maxwell Inst, Sch Math, Edinburgh, Midlothian, Scotland.
 Papastathopoulos, Ioannis, Univ Edinburgh, Ctr Stat, Edinburgh, Midlothian, Scotland.},
@@ -732,7 +732,7 @@ Papastathopoulos, Ioannis, Univ Edinburgh, Ctr Stat, Edinburgh, Midlothian, Scot
 Edinburgh; University of Edinburgh},
  article-number = {e52258},
  author = {Pastoll, Hugh and Garden, Derek L. and Papastathopoulos, Ioannis and
-Surmeli, Gulden and Nolan, Matthew F.},
+Sürmeli, Gulden and Nolan, Matthew F.},
  author-email = {mattnolan@ed.ac.uk},
  da = {2024-03-29},
  doc-delivery-number = {KU8DN},
@@ -759,7 +759,7 @@ OSCILLATIONS; FREQUENCY; ORGANIZATION},
  number-of-cited-references = {84},
  oa = {Green Submitted, Green Published, gold},
  orcid-numbers = {Garden, Derek/0000-0003-3336-3791
-SURMELI, GULSEN/0000-0002-3227-0641
+Sürmeli, Gülşen/0000-0002-3227-0641
 Nolan, Matthew/0000-0003-1062-6501},
  publisher = {eLife SCIENCES PUBL LTD},
  research-areas = {Life Sciences \& Biomedicine - Other Topics},
@@ -966,7 +966,7 @@ Trust {[}200855/Z/16/Z] Funding Source: researchfish; Wellcome Trust
 {[}200855/Z/16/Z] Funding Source: Wellcome Trust; BBSRC {[}BB/L010496/1,
 BB/H020284/1] Funding Source: UKRI},
  funding-text = {We thank Ian Duguid for advice in establishing head fixation and
-treadmill technologies, Gulsen Surmeli for assistance in targeting of
+treadmill technologies, Gülşen Sürmeli for assistance in targeting of
 L2SCs, and Jessica Menzies and Michelle Haglund for collecting the
 object recognition and object location data. This work was supported by
 the BBSRC (BB/L010496/1 and a BBSRC Eastbio studentship {[}grant
@@ -1036,7 +1036,7 @@ Biological Sciences Research Council {[}BB/M025454/1, BB/L010496/1]
 Funding Source: researchfish; Wellcome Trust {[}200855/Z/16/Z] Funding
 Source: Wellcome Trust; BBSRC {[}BB/L010496/1, BB/M025454/1] Funding
 Source: UKRI},
- funding-text = {We thank N. Rochefort and G. Surmeli for comments on the manuscript, A.
+ funding-text = {We thank N. Rochefort and G. Sürmeli for comments on the manuscript, A.
 Lee for sharing data before publication (ref. 26), and G. Buzsaki and E.
 Stark for sharing material for the generation of figures. This work was
 funded in part by the BBSRC (grants BB/M025454/1 and BB/L010496/1 to
@@ -1187,7 +1187,7 @@ interneurons},
 @article{WOS:000388572700024,
  abbr = {NOLAN<br>x<br>SÜRMELI},
  address = {600 TECHNOLOGY SQUARE, 5TH FLOOR, CAMBRIDGE, MA 02139 USA},
- author = {Surmeli, Gulsen and Marcu, Daniel Cosmin and McClure, Christina and
+ author = {Sürmeli, Gülşen and Marcu, Daniel Cosmin and McClure, Christina and
 Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
  author-email = {mattnolan@ed.ac.uk},
  da = {2024-03-29},
@@ -1204,11 +1204,11 @@ Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
  oa = {Green Published, hybrid},
  orcid-numbers = {Garden, Derek/0000-0003-3336-3791
 Marcu, Daniel-Cosmin/0000-0002-1006-3094
-SURMELI, GULSEN/0000-0002-3227-0641},
+Sürmeli, Gülşen/0000-0002-3227-0641},
  pages = {929},
  publisher = {CELL PRESS},
  research-areas = {Neurosciences \& Neurology},
- researcherid-numbers = {Surmeli, Gulsen/AAJ-1906-2020
+ researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020
 Garden, Derek/AAB-5908-2020
 Nolan, Matthew F/A-1356-2009},
  times-cited = {9},
@@ -1469,9 +1469,9 @@ microcircuitry, and identify molecularly defined pathways for spatial
 signals to influence computation in deep layers.},
  address = {50 HAMPSHIRE ST, FLOOR 5, CAMBRIDGE, MA 02139 USA},
  affiliation = {Nolan, MF (Corresponding Author), Univ Edinburgh, Ctr Integrat Physiol, Hugh Robson Bldg, Edinburgh EH8 9XD, Midlothian, Scotland.
-Surmeli, Gulsen; Marcu, Daniel Cosmin; McClure, Christina; Garden, Derek L. F.; Pastoll, Hugh; Nolan, Matthew F., Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.},
+Sürmeli, Gülşen; Marcu, Daniel Cosmin; McClure, Christina; Garden, Derek L. F.; Pastoll, Hugh; Nolan, Matthew F., Univ Edinburgh, Ctr Integrat Physiol, Edinburgh EH8 9XD, Midlothian, Scotland.},
  affiliations = {University of Edinburgh},
- author = {Surmeli, Gulsen and Marcu, Daniel Cosmin and McClure, Christina and
+ author = {Sürmeli, Gülşen and Marcu, Daniel Cosmin and McClure, Christina and
 Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
  author-email = {mattnolan@ed.ac.uk},
  da = {2024-03-29},
@@ -1507,11 +1507,11 @@ SPECIFICATION},
  orcid-numbers = {Garden, Derek/0000-0003-3336-3791
 Nolan, Matthew/0000-0003-1062-6501
 Marcu, Daniel-Cosmin/0000-0002-1006-3094
-SURMELI, GULSEN/0000-0002-3227-0641},
+Sürmeli, Gülşen/0000-0002-3227-0641},
  pages = {1040-1053},
  publisher = {CELL PRESS},
  research-areas = {Neurosciences \& Neurology},
- researcherid-numbers = {Surmeli, Gulsen/AAJ-1906-2020
+ researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020
 Core, Vector/CAF-4832-2022
 Garden, Derek/AAB-5908-2020
 Nolan, Matthew/A-1356-2009},
@@ -1731,10 +1731,10 @@ REGION; IDENTIFIES VARIANTS; PYRAMIDAL NEURONS; MOUSE-BRAIN; ADULT},
  oa = {Green Submitted, Green Published, gold},
  orcid-numbers = {McDonagh, Steven/0000-0001-7025-5197
 Nolan, Matthew/0000-0003-1062-6501
-SURMELI, GULSEN/0000-0002-3227-0641},
+Sürmeli, Gülşen/0000-0002-3227-0641},
  publisher = {PUBLIC LIBRARY SCIENCE},
  research-areas = {Biochemistry \& Molecular Biology; Mathematical \& Computational Biology},
- researcherid-numbers = {Surmeli, Gulsen/AAJ-1906-2020
+ researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020
 Nolan, Matthew/A-1356-2009},
  times-cited = {37},
  title = {Laminar and Dorsoventral Molecular Organization of the Medial Entorhinal
@@ -1897,14 +1897,14 @@ FIELDS; GRID CELLS; NEURONS; RAT; HIPPOCAMPUS; AREA},
  number-of-cited-references = {26},
  oa = {Green Published, hybrid},
  orcid-numbers = {Garden, Derek/0000-0003-3336-3791
-SURMELI, GULSEN/0000-0002-3227-0641
+Sürmeli, Gülşen/0000-0002-3227-0641
 Nolan, Matthew/0000-0003-1062-6501
 Parthier, Daniel/0000-0001-8775-024X
 Gonzalez-Sulser, Alfredo/0000-0003-3494-4029},
  pages = {16739-16743},
  publisher = {SOC NEUROSCIENCE},
  research-areas = {Neurosciences \& Neurology},
- researcherid-numbers = {Surmeli, Gulsen/AAJ-1906-2020
+ researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020
 Core, Vector/CAF-4832-2022
 Garden, Derek/AAB-5908-2020
 Nolan, Matthew/A-1356-2009},
@@ -2190,12 +2190,12 @@ the N-terminus.},
  address = {1160 BATTERY STREET, STE 100, SAN FRANCISCO, CA 94111 USA},
  affiliation = {Lacombe, J (Corresponding Author), NYU Sch Med, Howard Hughes Med Inst, Dept Physiol \& Neurosci, Smilow Neurosci Program, New York, NY USA.
 Lacombe, Julie; Hanley, Olivia; Jung, Heekyung; Philippidou, Polyxeni; Grinstein, Jonathan; Dasen, Jeremy S., NYU Sch Med, Howard Hughes Med Inst, Dept Physiol \& Neurosci, Smilow Neurosci Program, New York, NY USA.
-Surmeli, Gulsen, Columbia Univ, Dept Biochem \& Mol Biophys, New York, NY USA.},
+Sürmeli, Gülşen, Columbia Univ, Dept Biochem \& Mol Biophys, New York, NY USA.},
  affiliations = {Howard Hughes Medical Institute; New York University; Columbia
 University},
  article-number = {e1003184},
  author = {Lacombe, Julie and Hanley, Olivia and Jung, Heekyung and Philippidou,
-Polyxeni and Surmeli, Gulsen and Grinstein, Jonathan and Dasen, Jeremy
+Polyxeni and Sürmeli, Gülşen and Grinstein, Jonathan and Dasen, Jeremy
 S.},
  author-email = {jeremy.dasen@nyumc.org},
  da = {2024-03-29},
@@ -2219,13 +2219,13 @@ ORGANIZATION; CONNECTIVITY},
  number = {1},
  number-of-cited-references = {52},
  oa = {Green Published, gold, Green Submitted},
- orcid-numbers = {SURMELI, GULSEN/0000-0002-3227-0641
+ orcid-numbers = {Sürmeli, Gülşen/0000-0002-3227-0641
 Grinstein, Jonathan/0000-0003-2911-4506
 Hanley, Olivia/0000-0003-3801-1621
 Philippidou, Polyxeni/0000-0002-0733-3591},
  publisher = {PUBLIC LIBRARY SCIENCE},
  research-areas = {Genetics \& Heredity},
- researcherid-numbers = {Surmeli, Gulsen/AAJ-1906-2020},
+ researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020},
  times-cited = {52},
  title = {Genetic and Functional Modularity of <i>Hox</i> Activities in the
 Specification of Limb-Innervating Motor Neurons},
@@ -2406,7 +2406,7 @@ Plasticity},
  website = {https://doi.org/10.1523/JNEUROSCI.2520-11.2011},
  year = {2011}
 }
-@article{SURMELI2011653,
+@article{Sürmeli2011653,
  abbr = {SÜRMELI},
  abstract = {Summary
 Sensory-motor circuits in the spinal cord are constructed with a fine specificity that coordinates motor behavior, but the mechanisms that direct sensory connections with their motor neuron partners remain unclear. The dorsoventral settling position of motor pools in the spinal cord is known to match the distal-to-proximal position of their muscle targets in the limb, but the significance of invariant motor neuron positioning is unknown. An analysis of sensory-motor connectivity patterns in FoxP1 mutant mice, where motor neuron position has been scrambled, shows that the final pattern of sensory-motor connections is initiated by the projection of sensory axons to discrete dorsoventral domains of the spinal cord without regard for motor neuron subtype or, indeed, the presence of motor neurons. By implication, the clustering and dorsoventral settling position of motor neuron pools serve as a determinant of the pattern of sensory input specificity and thus motor coordination.
