--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,7 +140,8 @@ Osterweil, Emily/0000-0003-0582-2284},
  web-of-science-categories = {Neurosciences},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.1016/j.neuron.2022.11.012},
- year = {2023}
+ year = {2023},
+ data = {https://www.sciencedirect.com/science/article/pii/S0896627322010352?via%3Dihub#da0010}
 }
 @article{WOS:000934319900001,
  abbr = {NOLAN},
@@ -218,7 +219,9 @@ entorhinal cortex through synaptic connections in layer 1},
  web-of-science-categories = {Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.7554/eLife.83008},
- year = {2022}
+ year = {2022},
+ data = {https://doi.org/10.7488/ds/3787},
+ code = {https://github.com/MattNolanLab/lec_to_mec}
 }
 @article{WOS:000878031400006,
  abbr = {NOLAN},
@@ -312,7 +315,9 @@ retrohippocampal cortex},
  web-of-science-categories = {Biochemistry \& Molecular Biology; Biology; Cell Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.1016/j.cub.2022.08.050},
- year = {2022}
+ year = {2022},
+ data = {https://datashare.ed.ac.uk/handle/10283/777},
+ code = {https://github.com/MattNolanLab/Ramp_analysis}
 }
 @article{WOS:000850307700001,
  abbr = {NOLAN},
@@ -471,7 +476,8 @@ Qualcomm; IEEE Circuits \& Syst Soc},
  url = {https://doi.org/10.7554/eLife.73162},
  volume = {11},
  website = {https://doi.org/10.7554/eLife.73162},
- year = {2022}
+ year = {2022},
+ data = {https://datashare.ed.ac.uk/handle/10283/4369}
 }
 @article{WOS:000711952200005,
  abbr = {NOLAN<br>x<br>SÜRMELI},
@@ -704,7 +710,9 @@ Nolan, Matthew/0000-0003-1062-6501},
  web-of-science-categories = {Multidisciplinary Sciences},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.1038/s41467-020-17500-1},
- year = {2020}
+ year = {2020},
+ data = {https://datashare.is.ed.ac.uk/handle/10283/777},
+ code = {https://github.com/MattNolanLab/grid_cell_analysis}
 }
 @article{WOS:000519942200001,
  abbr = {NOLAN},
@@ -774,7 +782,9 @@ stellate cells in the medial entorhinal cortex},
  web-of-science-categories = {Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED); Social Science Citation Index (SSCI)},
  website = {https://doi.org/10.7554/eLife.52258},
- year = {2020}
+ year = {2020},
+ data ={https://datashare.ed.ac.uk/handle/10283/3569},
+ code={https://github.com/MattNolanLab/Inter_Intra_Variation}
 }
 @article{WOS:000505692200033,
  abbr = {NOLAN},
@@ -852,7 +862,8 @@ Episodic-like Memory},
  web-of-science-categories = {Biochemistry \& Molecular Biology; Biology; Cell Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.1016/j.cub.2019.11.027},
- year = {2020}
+ year = {2020},
+ data = {https://datashare.ed.ac.uk/handle/10283/3425}
 }
 @article{WOS:000424981600009,
  abbr = {NOLAN},
@@ -1002,7 +1013,8 @@ Learning},
  web-of-science-categories = {Cell Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.1016/j.celrep.2018.01.005},
- year = {2018}
+ year = {2018},
+ data ={https://datashare.ed.ac.uk/handle/10283/3002}
 }
 @article{WOS:000413916800007,
  abbr = {NOLAN},
@@ -1182,45 +1194,6 @@ interneurons},
  web-of-science-categories = {Biology},
  web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
  website = {https://doi.org/10.7554/eLife.20349},
- year = {2016}
-}
-@article{WOS:000388572700024,
- abbr = {NOLAN<br>x<br>SÜRMELI},
- address = {600 TECHNOLOGY SQUARE, 5TH FLOOR, CAMBRIDGE, MA 02139 USA},
- author = {Sürmeli, Gülşen and Marcu, Daniel Cosmin and McClure, Christina and
-Garden, Derek L. F. and Pastoll, Hugh and Nolan, Matthew F.},
- author-email = {mattnolan@ed.ac.uk},
- da = {2024-03-29},
- doc-delivery-number = {ED0ZH},
- doi = {10.1016/j.neuron.2016.11.011},
- eissn = {1097-4199},
- issn = {0896-6273},
- journal = {Neuron},
- journal-iso = {Neuron},
- language = {English},
- month = {11},
- number = {4},
- number-of-cited-references = {1},
- oa = {Green Published, hybrid},
- orcid-numbers = {Garden, Derek/0000-0003-3336-3791
-Marcu, Daniel-Cosmin/0000-0002-1006-3094
-Sürmeli, Gülşen/0000-0002-3227-0641},
- pages = {929},
- publisher = {CELL PRESS},
- research-areas = {Neurosciences \& Neurology},
- researcherid-numbers = {Sürmeli, Gülşen/AAJ-1906-2020
-Garden, Derek/AAB-5908-2020
-Nolan, Matthew F/A-1356-2009},
- times-cited = {9},
- title = {Molecularly Defined Circuitry Reveals Input-Output Segregation in Deep
-Layers of the Medial Entorhinal Cortex (vol 88, pg 1040, 2015)},
- unique-id = {WOS:000388572700024},
- usage-count-last-180-days = {1},
- usage-count-since-2013 = {4},
- volume = {92},
- web-of-science-categories = {Neurosciences},
- web-of-science-index = {Science Citation Index Expanded (SCI-EXPANDED)},
- website = {https://doi.org/10.1016/j.neuron.2016.11.011},
  year = {2016}
 }
 @article{WOS:000389029900005,
